# washihaji-api

./: Cargo.toml
migrations/: 20250215103422_washihaji.sql  20250215123427_seed.sql
src/: main.rs
